1-19-V1.4.31
	- Fixed Harvestable Frames Not Rendering After Being Filled In Hive

1-19-V1.4.30
	- Fixed Frames not rendering in Super when opened
	- Fixed Ceramic Hives not getting wax ring when harvestable
	- Fixed langstroth not updating meshes during interactions involving adding a populated skep/two tier hive.
	- Added pt-br lang files.

1-19-V1.4.29
	- Updated Ceramic Hive Rendering
	- Corrected positioning error with Langstroth Bases.

1-19-V1.4.28
	- Completed updating rendering issues.

1-19-V1.4.27
	- Rendering issue fixed (?)

1-19-V1.4.26
	- Updated rendering processes for 1.19
	- Some minor rendering issues persist (Frames not appearing in frame rack after harvesting, but frames still existing in the rack)
	- Basic functions in place

1-18-V1.4.25
	- Handbook entries cleaned up and made to function properly.
	- Readded variant entries to handbook to remove confusion regarding materials available to make Langstroth parts.

1-18-V1.4.24
	- Corrected error where frames would disappear from supers when they were the bottom piece of a LangstrothStack.

1-18-V1.4.23
	- Ceramic Hives no longer lose colony when broken.

1-18-V1.4.22
	- Fixed Ceramic Hives losing their colony when picked up while populated.
	- Crash with breaking a Ceramic Hive base fixed.

1-18-V1.4.21
	- Corrected error with Apiculture Handbook Guide

1.18-V1.4.20
	- Ukranian Translation Added
	- French Translation by Jay added
	- Net 7 Update

1.18-V1.4.18
	- Refixed the *expletive deleted* wax issue after I fixed it and broke it again.

1.18-v1.4.17
	- Corrected issue with hives not rendering properly.
	- Fixed text misalignment on open supers.
	- Updated lang greferences to be more translation friendly.
	- Corrected extra space in harvestable count text
	- Made frame production in Langstroth Hives responsive to Hive Population Size
	- Corrected wax texture issue.

1.18-v1.4.16-rc.2
	- Corrected errors involving the Langstroth BroodTop Item JSON and texture.

1.18-v1.3.16-rc.2