@@ -25,14 +25,14 @@ namespace FromGoldenCombs.Blocks.Langstroth
         {
             ItemSlot slot = byPlayer.InventoryManager.ActiveHotbarSlot;
             Block block = api.World.BlockAccessor.GetBlock(blockSel.Position, 0);
-            //if (!slot.Empty && slot.Itemstack.Collectible is Block && IsValidLangstroth(slot.Itemstack.Block))
-            //{
-            //    ItemStack langstrothblock = api.World.BlockAccessor.GetBlock(blockSel.Position).OnPickBlock(world, blockSel.Position);
-            //    api.World.BlockAccessor.SetBlock(api.World.GetBlock(
-            //    new AssetLocation("fromgoldencombs", "langstrothstack-two-" + block.Variant["side"])).BlockId, blockSel.Position);
-            //    BELangstrothStack lStack = (BELangstrothStack)api.World.BlockAccessor.GetBlockEntity(blockSel.Position);
-            //    lStack.InitializePut(langstrothblock, slot);
-            //}
+            if (!slot.Empty && slot.Itemstack.Collectible is Block && IsValidLangstroth(slot.Itemstack.Block))
+            {
+                ItemStack langstrothblock = api.World.BlockAccessor.GetBlock(blockSel.Position).OnPickBlock(world, blockSel.Position);
+                Block langstrothstackblock = api.World.BlockAccessor.GetBlock(new AssetLocation("fromgoldencombs", "langstrothstack-two-east"));
+                api.World.BlockAccessor.SetBlock(langstrothstackblock.BlockId, blockSel.Position);
+                BELangstrothStack lStack = (BELangstrothStack)api.World.BlockAccessor.GetBlockEntity(blockSel.Position);
+                //lStack.InitializePut(langstrothblock, slot);
+            }
             return true;
         }
 
